examples/fail/compare_ord_str_disallowed.hax
module ZZZ::CompareOrdStrDisallowed;

sub main() -> Int {
  var Str $a := "a";
  var Str $b := "b";

  if ($a < $b) { }
  return 0;
}
